--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 								<li><mark class="text-uppercase h2">* на вокзал, в аэропорт</mark></li>
 								<li><mark class="text-uppercase h2">* с подъемом на этаж</mark></li>
 								<li><mark class="text-uppercase h2">* к месту отдыха и лечения</mark></li>
+
 							</ul>
 							<div class="screen mb-100"></div>
             			</div>
@@ -89,47 +90,51 @@
 			</header><section id="benefit-carousel-5col" class="pt-75 pb-100 text-center light">
     			<div class="container">
         			<h2 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">О нас</h2>
+					<p class="mb-40" style="color: #1456af">Болезнь довольно неприятное событие, особенно когда она оказывается тяжелой, приковывая пациента к постели.Ведь никто не застрахован от осложнений после дтп, ишемической болезни сердца и еще ряда заболеваний, которые могут на очень долгое время приковать к постели человека.Очень часто пожилые люди, оказываются в затруднительном положении.</p>
         			<div class="row">
             			<div class="col-md-12">
                 			<div class="carousel-5item-dots owl-drag"><div class="item">
                         			<img src="images/icon-img-color-classicswatch.svg" class="screen mb-30" alt="">
-                        			<h3 class="">Open 24/7</h3>
-                        			<p>Наши работники в своей работе используют специализированный транспорт и  оборудование, позволяющее производить транспортировку намного безопаснее и уютнее. В большинстве случаев используются жесткие носилки, иногда мягкие.
+                        			<h3 class="">Решение неудобств</h3>
+                        			<p>При нехватке времени и использовании личного или городского транспорта, возникает ряд крайне неудобных моментов, которые решает наш сервис.
                         			</p>
                     			</div><div class="item">
                         			<img src="images/icon-img-color-connections.svg" class="screen mb-30" alt="">
-                        			<h3 class="">Cookies</h3>
-                        			<p class="">Мы предлагаем:
-* Перевозка больного в Бийске из одной больницы в другую, из квартиры в больницу и наоборот
-* Выполнение перевозки больного в центры диагностики, что бы больной мог пройти все необходимые процедуры
-* Перевозка инвалидов в любые точки отдыха дача,база отдыха,санатории.
-* междугороднюю перевозку лежачих пациентов
-* Транспортировка больных на ж/д вокзал,аэропорт</p>
+                        			<h3 class="">Квалифиция и опыт работы</h3>
+                        			<p class="">
+										Mы подходим со всей ответственностью, осознавая весь риск такой перевозки. Вы можете, не опасаясь, доверить нам этот процесс.
+									</p>
                     			</div><div class="item">
                         			<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">
-                        			<h3>Free Wi-Fi</h3>
-                        			<p class="">The detailed documentation will help you in adjusting</p>
+                        			<h3>Комфортная перевозка</h3>
+                        			<p class="">
+										Мы с особой тщательностью доставим больного в автомобиль. Наши работники всегда вежливы, знают осуществить наиболее комфортную перевозку.
+									</p>
                     			</div><div class="item">
                         			<img src="images/icon-img-color-hexagon.svg" class="screen mb-30" alt="">
-                        			<h3>Video games</h3>
-                        			<p class="">The page is adapted to the most of the popular platform in segment</p>
+                        			<h3>Оборудование и безопасность</h3>
+                        			<p class="">
+										Мы используем специализированный транспорт и оборудование, позволяющее производить транспортировку намного безопаснее и уютнее. В арсенале имеются жесткие и мягкие носилки.
+									</p>
                     			</div><div class="item">
                         			<img src="images/icon-img-color-classicswatch.svg" class="screen mb-30" alt="">
-                        			<h3 class="">Happy hours</h3>
-                        			<p class="">Your project looks great on any device. Content can be easily read
+                        			<h3 class="">Варианты перевозки</h3>
+                        			<p class="">
+										Из одной больницы в другую, из квартиры в больницу и наоборот, в центры диагностики, в любые точки отдыха, дачи, базы отдыха, санатории, на ж/д вокзал, аэропорт, междугороднюю перевозку
                         			</p>
-                    			</div><div class="item">
-                        			<img src="images/icon-img-color-connections.svg" class="screen mb-30" alt="">
-                        			<h3>Good location</h3>
-                        			<p>No fluff. Nothing should lead the visitor away from the main essence</p>
-                    			</div><div class="item">
-                        			<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">
-                        			<h3>Fixed price</h3>
-                        			<p>The detailed documentation will help you in adjusting</p>
-                    			</div><div class="item">
-                        			<img src="images/icon-img-color-hexagon.svg" class="screen mb-30" alt="">
-                        			<h3>Movies</h3>
-                        			<p>The page is adapted to the most of the popular platform in segment</p>
+<!--                    			</div><div class="item">-->
+<!--                        			<img src="images/icon-img-color-connections.svg" class="screen mb-30" alt="">-->
+<!--                        			<h3>Good location</h3>-->
+<!--                        			<p>-->
+<!--									</p>-->
+<!--                    			</div><div class="item">-->
+<!--                        			<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">-->
+<!--                        			<h3>Fixed price</h3>-->
+<!--                        			<p>The detailed documentation will help you in adjusting</p>-->
+<!--                    			</div><div class="item">-->
+<!--                        			<img src="images/icon-img-color-hexagon.svg" class="screen mb-30" alt="">-->
+<!--                        			<h3>Movies</h3>-->
+<!--                        			<p>The page is adapted to the most of the popular platform in segment</p>-->
                     			</div></div>
             			</div>
         			</div>
@@ -137,36 +142,43 @@
     			<div class="bg"></div>
 			</section><section id="text-4col-center" class="pt-150 pb-150 light text-center">
     			<div class="container" style="z-index: 10;">
-        			<h2 class="mb-75" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0" style="overflow: visible;"><strong>Как мы работаем <br></strong></h2>
-        			<div class="row">
+        			<h2 class="mb-40" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0" style="overflow: visible;"><strong>Как работает служба по перевозке лежачих больных<br></strong></h2>
+        			<p class="mb-50" style="color: #1456af">Решение проблемы происходит комплексно.
+						Обученные сотрудники аккуратно вынесут больного из палаты или квартиры, разместят в машине и доставят до места. Специалисты подберут оптимальный для больного способ перевозки.</p>
+					<div class="row">
             			<div class="col-md-3">
-                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Flexibility</h3>
-                			<p class="">Болезнь довольно неприятное событие, особенно когда она оказывается тяжелой, приковывая пациента к постели.Ведь никто не застрахован от осложнений после дтп, ишемической болезни сердца и еще ряда заболеваний, которые могут на очень долгое время приковать к постели человека.Очень часто пожилые люди, оказываются в затруднительном положении.
+                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Оборудованный транспорт</h3>
+                			<p class="">
+								Машина транспортировки оснащена необходимым оборудованием с системой фиксации больного.
+								Во время перевозки рядом с больным находится санитар, грамотно отреагирует при возникновении любой внештатной ситуации.
                 			</p>
             			</div>
             			<div class="col-md-3" style="z-index: 10;">
-                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Pure design</h3>
-                			<p class="" style="overflow: visible;"> И в таких случаях часто возникает вопрос о транспортировке больного, в медицинское учреждение, на вокзалы или места отдыха.
-Если использовать личный транспорт или транспорт городской, то можно вызвать ряд крайне неудобных моментов, да и время иногда играет очень важную роль. Вызов бригады транспортировки лежачих больных решит многие неудобства и тяготы.</p>
+                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Состав бригады</h3>
+                			<p class="" style="overflow: visible;"> В состав бригады транспортировки входят: водитель и санитар по транспортировке больного. При необходимости согласуется включение дополнительного санитара и сопровождающих.
+							</p>
             			</div>
             			<div class="col-md-3">
-                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">New level</h3>
-                			<p class="">Транспортировка лежачих больных в Бийске- это наша работа, к которой мы подходим со всей ответственностью, осознавая весь риск такой перевозки. Вы можете совершенно не опасаясь доверить нам этот процесс. Весь наш персонал квалифицирован и имеет огромный опыт работы.</p>
+                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Наши преимущества</h3>
+                			<p class="">* Комфортабельные условия транспортировки.<br>* Аккуратная перевозка пожилого человека или инвалида<br>* Вежливое обращение персонала.
+							</p>
             			</div>
             			<div class="col-md-3">
-                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Modern solutions</h3>
-                			<p class="">Мы с особой тщательностью доставим больного в автомобиль, с помощью которого перевезем его в любое необходимое место. Наши работники всегда вежливы и общительны. Они знают, как сделать лучше, что бы перевозка оказалась более комфортной.</p>
+                			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Наша специфика</h3>
+                			<p class="">Во время транспортировки медицинские вмешательства и процедуры не производятся. В случае если клиент не транспортабелен или требует немедленной медицинской помощи мы не имеем права предоставлять Вам свои услуги. В этом случае Вам необходимо вызывать бригаду Скорой Медицинской Помощи.
+							</p>
             			</div>
         			</div>
-        			<a href="#" class="btn btn-primary btn-lg mt-75"><span>Заказать звонок</span><i class="icon-arrow-right icon-position-right"></i></a>
+					<p class="mt-40">Позвольте нам выполнять такую сложную работу, как транспортировка больного. Мы гарантируем оперативность всех наших действий, наблюдение, и быстрое реагирование в самых сложных ситуациях.</p>
+        			<a href="#" class="btn btn-primary btn-lg mt-50"><span>Заказать звонок</span><i class="icon-arrow-right icon-position-right"></i></a>
     			</div>
     			<div class="bg"></div>
 			</section><section id="contact-center-form-2" class="pt-125 pb-125 dark text-center">
     			<div class="container">
         			<h2 class="dark" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0" style="">Заказать медицинское такси</h2>
-        			<h4 class="mb-50" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Заполните форму для оформления заявки на заказ
-            			<br>При оформлении заявки на транспортировку больного необходимо сообщить:Возраст, Вес, Точный адрес откуда и куда транспортировать больного, с указанием этажности.
-						<br>Введенные данные не хранятся сервисом, не передаются третьям лицам и используются исключительно в целях обратной связи.</h4>
+        			<h4 class="mb-50" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">
+            			<strong>При оформлении заявки на транспортировку больного необходимо сообщить:Возраст, Вес, Точный адрес откуда и куда транспортировать больного, с указанием этажности.</strong>
+						<br><br>Введенные данные не хранятся сервисом, не передаются третьям лицам и используются исключительно в целях обратной связи.</h4>
 
         			<div class="compressed-box-33">
             			<form action="./scripts/request.php" class="contact_form light" novalidate="novalidate" id="contact-center-form-2-form" style="">
