--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     			<div class="container">
         			<div class="row">
             			<div class="col-md-12">
-							<img class="screen mb-10" src="images/brand.jpg" srcset="images/brand.jpg 2x" alt="logo">
+<!--							<img class="screen mb-10" src="images/brand.jpg" srcset="images/brand.jpg 2x" alt="logo">-->
 							<h1 class=""><span class="text-uppercase"><strong>перевозка лежачих больных</strong><br>на специализированном транспорте</span></h1>
 							<h2 class="" ><span class="text-uppercase">круглосуточно!<br>город, межгород</span></h2>
 							<h2 class="" style="background-color: #1456af; color: white"><span class="text-uppercase">от кровати до кровати</span></h2>
@@ -178,7 +178,7 @@
         			<h2 class="dark" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0" style="">Заказать медицинское такси</h2>
         			<h4 class="mb-50" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">
             			<strong>При оформлении заявки на транспортировку больного необходимо сообщить:Возраст, Вес, Точный адрес откуда и куда транспортировать больного, с указанием этажности.</strong>
-						<br><br>Введенные данные не хранятся сервисом, не передаются третьям лицам и используются исключительно в целях обратной связи.</h4>
+						<br><br>*<small style="color: white">Введенные данные не хранятся сервисом, не передаются третьим лицам и используются исключительно в целях обратной связи.</small></h4>
 
         			<div class="compressed-box-33">
             			<form action="./scripts/request.php" class="contact_form light" novalidate="novalidate" id="contact-center-form-2-form" style="">
@@ -194,7 +194,7 @@
     			<div class="container">
         			<div class="row flex-md-vmiddle">
             			<div class="col-md-4">
-                			<p class="">© Multifour.com. All rights reserved.</p>
+                			<p class="">©  Все права защищены.</p>
             			</div>
             			<div class="col-md-4 text-center">
                 			<a href="#" class="icon-chevron-up icon-size-l icon-color"><i></i></a>
@@ -231,30 +231,31 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
             </div>
             <div class="modal-body">
-                <h2 class="mt-25 mb-40"><strong>Limited Offer!</strong></h2>
+                <h2 class="mt-25 mb-40"><strong>Мы получили Вашу заявку!</strong></h2>
                 <div class="row countdown mb-30" id="popup-center-countdown-countdown">
-                    <div class="col-md-3">
-                        <h2 class="mb-0"><span class="days">31</span></h2>
-                        <h4 class="mb-0">Days</h4>
-                        <div class="col-md-sep"><span class="desc-text">:</span></div>
-                    </div>
-                    <div class="col-md-3">
-                        <h2 class="mb-0"><span class="hours">02</span></h2>
-                        <h4 class="mb-0">Hours</h4>
-                        <div class="col-md-sep"><span class="desc-text">:</span></div>
-                    </div>
-                    <div class="col-md-3">
-                        <h2 class="mb-0"><span class="minutes">59</span></h2>
-                        <h4 class="mb-0">Minutes</h4>
-                        <div class="col-md-sep"><span class="desc-text">:</span></div>
-                    </div>
-                    <div class="col-md-3">
-                        <h2 class="mb-0"><span class="seconds">02</span></h2>
-                        <h4 class="mb-0">Seconds</h4>
-                    </div>
+<!--                    <div class="col-md-3">-->
+<!--                        <h2 class="mb-0"><span class="days">31</span></h2>-->
+<!--                        <h4 class="mb-0">Days</h4>-->
+<!--                        <div class="col-md-sep"><span class="desc-text">:</span></div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-3">-->
+<!--                        <h2 class="mb-0"><span class="hours">02</span></h2>-->
+<!--                        <h4 class="mb-0">Hours</h4>-->
+<!--                        <div class="col-md-sep"><span class="desc-text">:</span></div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-3">-->
+<!--                        <h2 class="mb-0"><span class="minutes">59</span></h2>-->
+<!--                        <h4 class="mb-0">Minutes</h4>-->
+<!--                        <div class="col-md-sep"><span class="desc-text">:</span></div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-3">-->
+<!--                        <h2 class="mb-0"><span class="seconds">02</span></h2>-->
+<!--                        <h4 class="mb-0">Seconds</h4>-->
+<!--                    </div>-->
                 </div>
-                <p class="mb-50">In our work we try to use only the most modern, convenient and interesting solutions. We want the template you downloaded look unique and new for such a long time as it is possible.</p>
-                <a href="#header-halfbg-slogan" class="btn btn-primary smooth btn-lg" target="_self"><span><strong>TRY FOR FREE</strong></span></a>
+                <p class="mb-50">Ваша заявка успешно отправлена! Наш оператор свяжется с Вами в ближайшее время для уточнения информации.<br>Пожалуйста, ожидайте. </p>
+<!--                <a href="#header-halfbg-slogan"  data-dismiss="modal" class="btn btn-primary smooth btn-lg close" target="_self"><span><strong>TRY FOR FREE</strong></span></a>-->
+				<button  data-dismiss="modal" class="btn btn-primary smooth btn-lg" ><span><strong>Понятно</strong></span></button>
             </div>
             <div class="bg"></div>
         </div>
