--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 		<script src="js/fonts.js"></script>
+		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="css/icons.css" />
 		<link rel="stylesheet" href="css/style.css" />
@@ -94,30 +95,36 @@
         			<div class="row">
             			<div class="col-md-12">
                 			<div class="carousel-5item-dots owl-drag"><div class="item">
-                        			<img src="images/icon-img-color-classicswatch.svg" class="screen mb-30" alt="">
+								<p class="fa fa-clock-o fa-3x" style="color: #d60000"></p>
+<!--                        			<img src="images/icon-img-color-classicswatch.svg" class="screen mb-30" alt="">-->
                         			<h3 class="">Решение неудобств</h3>
                         			<p>При нехватке времени и использовании личного или городского транспорта, возникает ряд крайне неудобных моментов, которые решает наш сервис.
                         			</p>
                     			</div><div class="item">
-                        			<img src="images/icon-img-color-connections.svg" class="screen mb-30" alt="">
+									<p class="fa fa-address-card-o fa-3x" style="color: #d60000"></p>
+<!--                        			<img src="images/icon-img-color-connections.svg" class="screen mb-30" alt="">-->
+<!--									<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">-->
                         			<h3 class="">Квалифиция и опыт работы</h3>
                         			<p class="">
 										Mы подходим со всей ответственностью, осознавая весь риск такой перевозки. Вы можете, не опасаясь, доверить нам этот процесс.
 									</p>
                     			</div><div class="item">
-                        			<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">
+									<p class="fa fa-bed fa-3x" style="color: #d60000"></p>
+<!--                        			<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">-->
                         			<h3>Комфортная перевозка</h3>
                         			<p class="">
 										Мы с особой тщательностью доставим больного в автомобиль. Наши работники всегда вежливы, знают осуществить наиболее комфортную перевозку.
 									</p>
                     			</div><div class="item">
-                        			<img src="images/icon-img-color-hexagon.svg" class="screen mb-30" alt="">
+									<p class="fa fa-medkit fa-3x" style="color: #d60000"></p>
+<!--                        			<img src="images/icon-img-color-hexagon.svg" class="screen mb-30" alt="">-->
                         			<h3>Оборудование и безопасность</h3>
                         			<p class="">
 										Мы используем специализированный транспорт и оборудование, позволяющее производить транспортировку намного безопаснее и уютнее. В арсенале имеются жесткие и мягкие носилки.
 									</p>
                     			</div><div class="item">
-                        			<img src="images/icon-img-color-classicswatch.svg" class="screen mb-30" alt="">
+									<p class="fa fa-code-fork fa-3x" style="color: #d60000"></p>
+<!--                        			<img src="images/icon-img-color-classicswatch.svg" class="screen mb-30" alt="">-->
                         			<h3 class="">Варианты перевозки</h3>
                         			<p class="">
 										Из одной больницы в другую, из квартиры в больницу и наоборот, в центры диагностики, в любые точки отдыха, дачи, базы отдыха, санатории, на ж/д вокзал, аэропорт, междугороднюю перевозку
