--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     			<div class="container">
         			<div class="row">
             			<div class="col-md-12">
-<!--							<img class="screen mb-10" src="images/brand.jpg" srcset="images/brand.jpg 2x" alt="logo">-->
+<!--							<img class="screen mb-10" src="images/logo.png" srcset="images/logo.png 2x" alt="logo">-->
 							<h1 class=""><span class="text-uppercase"><strong>перевозка лежачих больных</strong><br>на специализированном транспорте</span></h1>
 							<h2 class="" ><span class="text-uppercase">круглосуточно!<br>город, межгород</span></h2>
 							<h2 class="" style="background-color: #1456af; color: white"><span class="text-uppercase">от кровати до кровати</span></h2>
@@ -71,16 +71,16 @@
 			</header><header id="header-center-slogan-form-2" class="pt-150 pb-200 text-left light">
     			<div class="container">
         			<div class="row">
-            			<div class="col-md-12">
+            			<div class="col-md-12" style="background-color: rgba(255,245,250,0.1); border-radius: 100px">
 <!--                			<img class="screen mb-100" src="images/brand.png" srcset="images/logo2-light-big@2x.png 2x" alt="logo">-->
-							<div class="screen mb-100"></div>
-                			<mark class="mb-75 text-uppercase h1 transmark"><strong>профессионально и аккуратно осуществим перевозку лежачих больных «от койки до койки</strong></mark>
+<!--							<div class="screen mb-100"></div>-->
+                			<h2 class="mb-75 text-uppercase mt-150" style="color: white"><strong>профессионально и аккуратно <br>осуществим перевозку лежачих больных<br>«от койки до койки</strong></h2>
 							<div class="screen mt-50"></div>
 							<ul>
-								<li><mark class="text-uppercase h2">* из больницы - домой</mark></li>
-								<li><mark class="text-uppercase h2">* на вокзал, в аэропорт</mark></li>
-								<li><mark class="text-uppercase h2">* с подъемом на этаж</mark></li>
-								<li><mark class="text-uppercase h2">* к месту отдыха и лечения</mark></li>
+								<li class="text-uppercase h2" style="color: white">из больницы - домой</li>
+								<li class="text-uppercase h2" style="color: white">на вокзал, в аэропорт</li>
+								<li class="text-uppercase h2" style="color: white">с подъемом на этаж</li>
+								<li class="text-uppercase h2" style="color: white">к месту отдыха и лечения</li>
 
 							</ul>
 							<div class="screen mb-100"></div>
@@ -91,7 +91,7 @@
 			</header><section id="benefit-carousel-5col" class="pt-75 pb-100 text-center light">
     			<div class="container">
         			<h2 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">О нас</h2>
-					<p class="mb-40" style="color: #1456af">Болезнь довольно неприятное событие, особенно когда она оказывается тяжелой, приковывая пациента к постели.Ведь никто не застрахован от осложнений после дтп, ишемической болезни сердца и еще ряда заболеваний, которые могут на очень долгое время приковать к постели человека.Очень часто пожилые люди, оказываются в затруднительном положении.</p>
+					<p class="mb-40" style="color: #1456af">Болезнь довольно неприятное событие, особенно когда она оказывается тяжелой, приковывая пациента к постели. Ведь никто не застрахован от осложнений после дтп, ишемической болезни сердца и еще ряда заболеваний, которые могут на очень долгое время приковать к постели человека. Очень часто пожилые люди, оказываются в затруднительном положении.</p>
         			<div class="row">
             			<div class="col-md-12">
                 			<div class="carousel-5item-dots owl-drag"><div class="item">
@@ -104,7 +104,7 @@
 									<p class="fa fa-address-card-o fa-3x" style="color: #d60000"></p>
 <!--                        			<img src="images/icon-img-color-connections.svg" class="screen mb-30" alt="">-->
 <!--									<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">-->
-                        			<h3 class="">Квалифиция и опыт работы</h3>
+                        			<h3 class="">Квалификация и опыт работы</h3>
                         			<p class="">
 										Mы подходим со всей ответственностью, осознавая весь риск такой перевозки. Вы можете, не опасаясь, доверить нам этот процесс.
 									</p>
@@ -113,7 +113,7 @@
 <!--                        			<img src="images/icon-img-color-ipadtarget.svg" class="screen mb-30" alt="">-->
                         			<h3>Комфортная перевозка</h3>
                         			<p class="">
-										Мы с особой тщательностью доставим больного в автомобиль. Наши работники всегда вежливы, знают осуществить наиболее комфортную перевозку.
+										Мы с особой тщательностью доставим больного в автомобиль. Наши работники всегда вежливы и осуществляют наиболее комфортную перевозку.
 									</p>
                     			</div><div class="item">
 									<p class="fa fa-medkit fa-3x" style="color: #d60000"></p>
@@ -157,7 +157,7 @@
                 			<h3 data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">Оборудованный транспорт</h3>
                 			<p class="">
 								Машина транспортировки оснащена необходимым оборудованием с системой фиксации больного.
-								Во время перевозки рядом с больным находится санитар, грамотно отреагирует при возникновении любой внештатной ситуации.
+								Во время перевозки рядом с больным находится санитар, который грамотно отреагирует при возникновении любой внештатной ситуации.
                 			</p>
             			</div>
             			<div class="col-md-3" style="z-index: 10;">
@@ -185,7 +185,7 @@
         			<h2 class="dark" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0" style="">Заказать медицинское такси</h2>
         			<h4 class="mb-50" data-aos="fade" data-aos-easing="none" data-aos-once="true" data-aos-duration="500" data-aos-delay="0">
             			<strong>При оформлении заявки на транспортировку больного необходимо сообщить:Возраст, Вес, Точный адрес откуда и куда транспортировать больного, с указанием этажности.</strong>
-						<br><br>*<small style="color: white">Введенные данные не хранятся сервисом, не передаются третьим лицам и используются исключительно в целях обратной связи.</small></h4>
+						<br><br><small style="color: white">Введенные данные не хранятся сервисом, не передаются третьим лицам и используются исключительно в целях обратной связи.</small></h4>
 
         			<div class="compressed-box-33">
             			<form action="./scripts/request.php" class="contact_form light" novalidate="novalidate" id="contact-center-form-2-form" style="">
@@ -206,25 +206,25 @@
             			<div class="col-md-4 text-center">
                 			<a href="#" class="icon-chevron-up icon-size-l icon-color"><i></i></a>
             			</div>
-            			<div class="col-md-4 text-md-right">
-                			<ul class="social-list">
-                    			<li>
-                        			<a href="#"><i class="icon-twitter icon-size-m"></i></a>
-                    			</li><li>
-                        			<a href="#"><i class="icon-facebook icon-size-m"></i></a>
-                    			</li><li>
-                        			<a href="#"><i class="icon-linkedin icon-size-m"></i></a>
-                    			</li><li>
-                        			<a href="#"><i class="icon-github-alt icon-size-m"></i></a>
-                    			</li><li>
-                        			<a href="#"><i class="icon-google-plus icon-size-m"></i></a>
-                    			</li><li>
-                        			<a href="#"><i class="icon-dribbble icon-size-m"></i></a>
-                    			</li><li>
-                        			<a href="#"><i class="icon-behance icon-size-m"></i></a>
-                    			</li>
-                			</ul>
-            			</div>
+<!--            			<div class="col-md-4 text-md-right">-->
+<!--                			<ul class="social-list">-->
+<!--                    			<li>-->
+<!--                        			<a href="#"><i class="icon-twitter icon-size-m"></i></a>-->
+<!--                    			</li><li>-->
+<!--                        			<a href="#"><i class="icon-facebook icon-size-m"></i></a>-->
+<!--                    			</li><li>-->
+<!--                        			<a href="#"><i class="icon-linkedin icon-size-m"></i></a>-->
+<!--                    			</li><li>-->
+<!--                        			<a href="#"><i class="icon-github-alt icon-size-m"></i></a>-->
+<!--                    			</li><li>-->
+<!--                        			<a href="#"><i class="icon-google-plus icon-size-m"></i></a>-->
+<!--                    			</li><li>-->
+<!--                        			<a href="#"><i class="icon-dribbble icon-size-m"></i></a>-->
+<!--                    			</li><li>-->
+<!--                        			<a href="#"><i class="icon-behance icon-size-m"></i></a>-->
+<!--                    			</li>-->
+<!--                			</ul>-->
+<!--            			</div>-->
         			</div>
     			</div>
     			<div class="bg"></div>
