--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <nav id="nav-menu-text" class="navbar navbar-fixed-top light">
     <div class="container">
         <div class="navbar-header">
-			<div class="navbar-brand"><a href="/"><img src="images/brand.jpg" alt="Logo" height="65px" class=""></a> </div>
+			<div class="navbar-brand"><a href="/"><img src="images/favicon.png" alt="Logo" height="65px" class=""></a> </div>
             <button type="button" class="navbar-toggle navbar-toggle-center collapsed" data-toggle="collapse" data-target="#navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
