--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>index</title>
+		<title>Помощь плюс</title>
 		
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
 		<meta name="keywords" content="" />
